# cube-arduino-sdk

./: CMakeLists.txt  library.json  library.properties  platformio.ini
examples/: CMakeLists.txt
examples/src/: main.cpp
src/: CMakeLists.txt  CubeArduino.h  Delta.cpp  Delta.h  Updatable.h  ValueRange.cpp  ValueRange.h  main.cpp  utils.h
src/components/: Button.cpp  Button.h  Component.h  Encoder.cpp  Encoder.h  Poti.cpp  Poti.h  Switch.cpp  Switch.h  ToggleButton.h
src/counter/: Counter.h  RepeatingCounter.cpp  RepeatingCounter.h  RepeatingIntervalCounter.cpp  RepeatingIntervalCounter.h  UpDownCounter.cpp  UpDownCounter.h  UpDownRepeatingCounter.cpp  UpDownRepeatingCounter.h
src/interval/: BasicInterval.cpp  BasicInterval.h  Interval.cpp  Interval.h
src/interval-counter/: IntervalCounter.h  RepeatingIntervalCounter.h  UpDownRepeatingIntervalCounter.h
src/platform/: ArduinoPlatform.cpp  ArduinoPlatform.h  Externals.h  Platform.h  TestPlatform.cpp  TestPlatform.h
src/timing/: Delta.cpp  Delta.h  Interval.h
test/: CMakeLists.txt  External.h  TestPlatform.cpp  TestPlatform.h  main.cpp
test/test_desktop/: main.cpp
